<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.gravity</groupId>
  <artifactId>gravity-tool</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  
  <name>GRaViTY</name>
  <description>Static analysis for security compliance and design quality of Java projects.</description>
  <url>https://gravity-tool.org</url>
 
  <licenses>
    <license>
      <name>Eclipse Public License - v 2.0</name>
      <url>https://www.eclipse.org/legal/epl-2.0/</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  
  <scm>
    <url>https://github.com/GRaViTY-Tool/gravity-tool/</url>
  </scm>

  <properties>
    <tycho-version>4.0.8</tycho-version>
    <jacoco.version>0.8.12</jacoco.version>
    <dependency-plugin>3.8.1</dependency-plugin>

    <maven.compiler.release>17</maven.compiler.release>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    
    <jacoco.aggregate.reportPaths>${maven.multiModuleProjectDirectory}/org.gravity.coverage/target/jacoco-aggregate/</jacoco.aggregate.reportPaths>
   
    <sonar.language>java</sonar.language>
    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.organization>svenpeldszus-github</sonar.organization>
    <sonar.projectKey>gravity</sonar.projectKey>
    <sonar.moduleKey>${project.groupId}:${project.artifactId}</sonar.moduleKey>
    <sonar.coverage.jacoco.xmlReportPaths>${jacoco.aggregate.reportPaths}/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
    <sonar.junit.reportPaths>${maven.multiModuleProjectDirectory}/target/surefire-reports</sonar.junit.reportPaths>
  </properties>
	
  <modules>
    <module>build/org.gravity.updatesite</module>
    <module>build/org.gravity.headless.product</module>
    <module>build/org.gravity.features.eclipse</module>
    <module>build/org.gravity.features.hulk</module>
    <module>build/org.gravity.features.modisco</module>
    <module>build/org.gravity.features.refactorings</module>
    <module>build/org.gravity.features.security</module>
    <module>build/org.gravity.features.typegraph.basic</module>
    <module>build/org.gravity.features.uml</module>
    <module>build/org.gravity.license.epl</module>
    <module>implementation/org.gravity.eclipse</module>
    <module>implementation/org.gravity.eclipse.ui</module>
    <module>implementation/org.gravity.goblin</module>
    <module>implementation/org.gravity.headless</module>
    <module>implementation/org.gravity.hulk</module>
    <module>implementation/org.gravity.hulk.annotations</module>
    <module>implementation/org.gravity.hulk.antipatterngraph</module>
    <module>implementation/org.gravity.hulk.refactoringgraph</module>
    <module>implementation/org.gravity.hulk.resolve</module>
    <module>implementation/org.gravity.hulk.ui</module>
    <module>implementation/org.gravity.hulk.ui.visualization</module>
    <module>implementation/org.gravity.metrics.sourcemeter</module>
    <module>implementation/org.gravity.modisco</module>
    <module>implementation/org.gravity.refactorings</module>
    <module>implementation/org.gravity.refactorings.ui</module>
    <module>implementation/org.gravity.secdfd</module>
    <module>implementation/org.gravity.security.metrics</module>
    <module>implementation/org.gravity.security.annotations</module>
    <module>implementation/org.gravity.security.annotations.check</module>
    <module>implementation/org.gravity.security.annotations.ui</module>
    <module>implementation/org.gravity.security.annotations.pm</module>
    <module>implementation/org.gravity.security.violation.patterns</module>
    <module>implementation/org.gravity.tgg.modisco.pm</module>
    <module>implementation/org.gravity.tgg.modisco.ui</module>
    <module>implementation/org.gravity.tgg.modisco.uml</module>
    <module>implementation/org.gravity.tgg.pm.uml</module>
    <module>implementation/org.gravity.typegraph.basic</module>
    <module>implementation/org.gravity.typegraph.basic.ui</module>
    <module>implementation/org.gravity.umlsecrt</module>
    <module>tests/org.gravity.eclipse.tests</module>
    <module>tests/org.gravity.goblin.tests</module>
    <module>tests/org.gravity.headless.tests</module>
    <module>tests/org.gravity.hulk.tests</module>
    <module>tests/org.gravity.refactorings.tests</module>
    <module>tests/org.gravity.security.tests</module>
    <module>tests/org.gravity.security.violation.patterns.tests</module>
    <module>tests/org.gravity.tgg.tests</module>
    <module>tests/org.gravity.typegraph.basic.tests</module>
    <module>org.gravity.coverage</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho-version}</version>
        <extensions>true</extensions>
        <!--<configuration>
          <pomDependencies>consider</pomDependencies>
        </configuration>-->
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco.version}</version>
         <executions>
           <execution>
             <id>pre-integration-test</id>
             <goals>
               <goal>prepare-agent-integration</goal>
             </goals>
             <configuration>
               <propertyName>surefireArgLine</propertyName>
             </configuration>
           </execution>
           <execution>
             <id>post-integration-test</id>
             <phase>post-integration-test</phase>
             <goals>
               <goal>report-integration</goal>
             </goals>
             <configuration>
               <propertyName>surefireArgLine</propertyName>
             </configuration>
           </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-surefire-plugin</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <reportsDirectory>${sonar.junit.reportPaths}</reportsDirectory>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho-version}</version>
        <configuration>
          <executionEnvironment>JavaSE-21</executionEnvironment>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>Eclipse 2024-03</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/releases/2024-03</url>
    </repository>
    <repository>
      <id>Eclipse 2023-06</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/releases/2023-06</url>
    </repository>
    <repository>
      <id>Papyrus</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/modeling/mdt/papyrus/updates/releases/2023-12</url>
    </repository>
    <repository>
      <id>eMoflon TIE</id>
      <layout>p2</layout>
      <url>https://gravity-tool.org/emoflon-tie/updatesite</url>
    </repository>
    <repository>
      <id>Henshin</id>
      <layout>p2</layout>
      <url>https://download.eclipse.org/modeling/emft/henshin/updates/nightly</url>
    </repository>
    <repository>
      <id>Henshin MultiVar</id>
      <layout>p2</layout>
      <url>https://gravity-tool.org/henshin-multivar/updatesite</url>
    </repository>
    <repository>
      <id>MoMOT</id>
      <layout>p2</layout>
      <url>https://martin-fleck.github.io/momot/eclipse/updates/latest/develop</url>
    </repository>
    <repository>
      <id>plantuml</id>
      <layout>p2</layout>
      <url>https://hallvard.github.io/plantuml</url>
    </repository>
    <repository>
      <id>CARiSMA</id>
      <layout>p2</layout>
      <url>https://carisma-tool.github.io/carisma-tool</url>
    </repository>
  </repositories>
</project>
